force-app/main/default/objects/TimeSheet__c/fields/CheckOut_Case_Materials_PII__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_Case_Materials_PII__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CheckOut Case Materials PII</label>
    <type>TextArea</type>
</CustomField>