force-app/main/default/objects/TimeSheet__c/fields/ideal_time__c.field-meta.xml
<CustomField>
    <fullName>ideal_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ideal time</label>
    <type>DateTime</type>
</CustomField>