force-app/main/default/objects/TimeSheet__c/fields/Idle_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Idle_Minutes__c</fullName>
    <label>Idle Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>