force-app/main/default/objects/TimeSheet__c/fields/Idle_Time_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Idle_Time_Percentage__c</fullName>
    <formula>IF(ISNULL(Idle_Minutes__c) || ((Logout_Time__c - Login_Time__c) * 24 * 60) = 0, 
   0, 
   (Idle_Minutes__c / ((Logout_Time__c - Login_Time__c) * 24 * 60)) * 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idle Time Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>