force-app/main/default/objects/TimeSheet__c/fields/Logout_Time__c.field-meta.xml
<CustomField>
    <fullName>Logout_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Logout Time</label>
    <type>DateTime</type>
</CustomField>