force-app/main/default/objects/TimeSheet__c/fields/Miles_Driven__c.field-meta.xml
<CustomField>
    <fullName>Miles_Driven__c</fullName>
    <label>Miles Driven</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>