force-app/main/default/objects/TimeSheet__c/fields/Total_Active_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Minutes__c</fullName>
    <formula>((Logout_Time__c - Login_Time__c) * 24 * 60) - IF(ISNULL(Idle_Minutes__c), 0, Idle_Minutes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Active Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>