force-app/main/default/objects/TimeSheet__c/fields/Total_Minutes_LoggedIn__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes_LoggedIn__c</fullName>
    <formula>(
  DATETIMEVALUE(Logout_Time__c) - DATETIMEVALUE(Login_Time__c)
) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Minutes LoggedIn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>