force-app/main/default/objects/TimeSheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Date__c</columns>
    <columns>Number_of_Hours__c</columns>
    <columns>Submitted__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>PMO</value>
    </filters>
    <label>PMO</label>
</ListView>